# memx

./: .gitignore  README.md  db.py  embedder.py  main.py  manager.py  pyproject.toml  setup.cfg  store.py
memx/: __init__.py  client.py  extractor.py
