[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memx"
version = "0.1.0"
description = "Lightweight Mem0-like memory layer for AI agents"
authors = [
    {name = "Zaeem", email = "zaeemhassan2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "openai",
    "faiss-cpu",
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/Zaeem-Hassan/memx"