[metadata]
name = memora-ai
version = 0.1.1
description = Mem0-like memory layer for AI agents
long_description = file: README.md
long_description_content_type = text/markdown
author = Zaeem
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    openai
    faiss-cpu
    numpy